<resources>
    <string name="app_name">共享电动车</string>
    <string name="copyright">©2016 JCSoft. All Rights Reserved.</string>
    <string name="device">For Android</string>
    <string name="no_network">无网络，请联网后重试</string>
    <string name="server_timeout">网络请求失败，请稍后重试</string>
    <string name="client_timeout">网络请求失败，请检查你的网络设置</string>
    <string name="data_error">数据异常...</string>
    <string name="http_download_failed">下载失败</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="register_action">注册会员</string>
    <string name="book_install_action">预约安装</string>
    <string name="forget_password">忘记密码</string>
    <string name="location">卫星定位</string>
    <string name="driving_record">行车记录</string>
    <string name="alarm_message">报警消息</string>
    <string name="equipment_serial_number">设备编号：</string>
    <string name="equipment_serial_number1">设备编号</string>
    <string name="positioning_state">定位状态：</string>
    <string name="positioning_date">定位时间：</string>
    <string name="online_status">在线状态：</string>
    <string name="acc">ACC：</string>
    <string name="main_power">主电源：</string>
    <string name="speed">速度：</string>
    <string name="direction">方向：</string>
    <string name="lock_car_status">锁车状态：</string>
    <string name="address">最后位置：</string>
    <string name="track_prompt">途经点</string>
    <string name="track_start">起点</string>
    <string name="track_end">终点</string>
    <string name="chart_today_mileage">今日里程</string>
    <string name="chart_average_speed">平均速度</string>
    <string name="chart_max_speed">最高速度</string>
    <string name="chart_min_speed">最低速度</string>
    <string name="base_info">基本资料</string>
    <string name="car_info">车辆资料</string>
    <string name="service_item">服务条款</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="about">关于</string>
    <string name="logout">退出账号</string>
    <string name="back">返回</string>
    <string name="imei">IMEI</string>
    <string name="information_id_card">数据卡号</string>
    <string name="open_date">开通日期</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="contact_phone">联系电话</string>
    <string name="work_phone">工作电话</string>
    <string name="region">所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="belongs_to_unit">所属单位</string>
    <string name="car_number">车牌号码</string>
    <string name="brand">车辆品牌</string>
    <string name="models">车辆型号</string>
    <string name="motor_number">电机编号</string>
    <string name="frame_number">车架编号</string>
    <string name="car_color">车辆颜色</string>
    <string name="buy_date">购买日期</string>
    <string name="buy_price">购买价格</string>
    <string name="car_photo">车辆照片</string>
    <string name="app_require_input">必填</string>
    <string name="app_require_check">必选</string>
    <string name="submit">提交</string>
    <string name="your_name">您的姓名</string>
    <string name="install_count">所需数量</string>
    <string name="pay_type">付款方式</string>
    <string name="save">保存</string>

    <string name="app_id">输入您讯飞的appid</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>

    <!-- CustomDialog -->
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="string_confirm">确定</string>
    <string name="string_reset">清除</string>

    <string name="home">首页</string>
    <string name="hire_car">租车</string>
    <string name="shop">商城</string>
    <string name="my">我的</string>

    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="digits_number">0123456789</string>
    <string name="digits_id_card">0123456789xX</string>

    <string name="top_bar_battery">电量监测</string>
    <string name="txt_track_prompt">途经点</string>
    <string name="txt_start">起点</string>
    <string name="txt_end">终点</string>
</resources>
