<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.xiaomizuche.view.TopBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:back_is_finish="true"
        app:center_text="@string/base_info"
        app:has_center="true"
        app:has_left="true"
        app:has_left_clickable="true"
        app:left_icon="@mipmap/back_icon"
        app:left_text="@string/back" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_equipment_serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:row_label_value_bottom_line="1"
        app:row_label_value_label="@string/equipment_serial_number1"
        app:row_label_value_top_line="1" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_imei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:row_label_value_bottom_line="2"
        app:row_label_value_label="@string/imei"
        app:row_label_value_top_line="1" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_data_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_label="@string/information_id_card" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_open_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_label="@string/open_date" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:row_label_value_bottom_line="2"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/name"
        app:row_label_value_top_line="1" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/sex" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/contact_phone" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_work_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/work_phone" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="2"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/region" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_label_value_bottom_line="1"
        app:row_label_value_can_click="true"
        app:row_label_value_has_right_arrow="true"
        app:row_label_value_label="@string/detailed_address" />

    <com.xiaomizuche.view.RowLabelValueView
        android:id="@+id/rlvv_belongs_to_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:row_label_value_bottom_line="1"
        app:row_label_value_label="@string/belongs_to_unit"
        app:row_label_value_top_line="1" />

</LinearLayout>
