<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:src="@mipmap/icon_left_arrow" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/icon_logo" />

    <RelativeLayout
        android:id="@+id/rl_loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <ImageView
            android:id="@+id/iv_loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/icon_id" />

        <EditText
            android:id="@+id/et_loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_loginName"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/iv_loginName"
            android:background="@null"
            android:hint="手机号码/租车卡号"
            android:textColorHint="@color/font_gray"
            android:textSize="14sp" />

        <View
            android:id="@+id/v_line_loginName"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_loginName"
            android:layout_marginTop="8dp"
            android:background="@color/font_gray" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_loginName"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/icon_pass" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_password"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_password"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@id/tv_forget_password"
            android:layout_toRightOf="@id/iv_password"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/font_gray"
            android:textSize="14sp" />

        <View
            android:id="@+id/v_line_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_password"
            android:layout_marginTop="8dp"
            android:background="@color/font_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/orange_14"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:text="@string/register_action" />

</RelativeLayout>
